desktop layout for catalog page, set activeProduct on hover and page navigation on click

--- a/Sparc2/Sparc2/Html.razor.scss
+++ b/Sparc2/Sparc2/Html.razor.scss
@@ -253,6 +253,19 @@ ul {
     z-index: 200;
 }
 
+// FONTS
+
+/*font-family: elza-text, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-family: elza-text, sans-serif;
+font-weight: 500;
+font-style: normal;
+font-family: elza-text, sans-serif;
+font-weight: 700;
+font-style: normal;*/
+
+
 /*
 Fonts Added:
 
