--- a/Sparc2/Sparc2/_variables.scss
+++ b/Sparc2/Sparc2/_variables.scss
@@ -22,7 +22,7 @@
     --purple-200: #C596FB;
     --purple-300: #B274FA;
     --purple-400: #8B46DB;
-    --purple-500: #3F256B;
+    --purple-500: #6A2FD0;
     --purple-600: #52289C;
     --purple-700: #3F256B;
     --purple-800: #2B1C45;
@@ -37,4 +37,5 @@
     --orange-700: #B0420B;
     --orange-800: #6B2908;
     --orange-900: #3F1805;
+    --blue: #0090F8;
 }
