--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@100;200;300;400;500;600;700;800;900&family=Fjalla+One&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/wil4gfg.css">
     <ImportMap />
     
     <HeadOutlet @rendermode="InteractiveServer" />
@@ -18,6 +22,7 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="js/dragging.js"></script>
     <script src="js/scrolling.js"></script>
+    <script src="js/catalog.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
     <script src="/Blossom/js/BlossomCloudAuthenticator.js"></script>
