--- a/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.css
@@ -1,14 +1,14 @@
 ﻿.user-profile-container {
   position: relative;
-  width: 66px;
-  height: 66px;
+  width: 40px;
+  height: 40px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 .user-profile-container .profile-picture-wrapper {
-  width: 44px;
-  height: 44px;
+  height: calc(100% - 8px);
+  width: 100%;
   border-radius: 50%;
   border: 4px solid var(--gray-200);
 }
@@ -46,12 +46,12 @@
   filter: brightness(0) invert(1);
 }
 .user-profile-container button.top {
-  top: 30px;
-  left: -5%;
+  top: 40px;
+  right: -80%;
   transform: translateX(-50%);
 }
 .user-profile-container button.bottom {
-  bottom: -20px;
+  bottom: -35px;
   left: 50%;
   transform: translateX(-50%);
 }
