--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -19,31 +19,35 @@
         else
         {
             <div class="left" @onclick='() => Navigate("/")'>
-                <SparcLogo />
+                <SparcLogo TextOnly=true />
             </div>
             <div class="right">
-                @* <Auth /> *@
-                <ProfileCircle />
-                @if (CurrentUser is not null)
-                {
-                    <div @onclick:stopPropagation @onkeypress:stopPropagation>                        
-                        @if (IsEditingUsername)
-                        {
-                            <input type="text" @bind="Username"
-                                   @ref="UsernameInput"
-                                   @bind:event="oninput"
-                                   @onblur="SaveUsername"
-                                   @onkeypress="HandleKeyPress" />
-                        }
-                        else
-                        {
-                            <span @onclick="StartEditing">
-                                @CurrentUser.Username
-                            </span>
-                        }
-                    </div>
-                }
+                <button id="about-btn" class="secondary-btn" @onclick='() => Nav.NavigateTo("/about")'>About Us</button>
+                <button id="catalog-btn" class="secondary-btn" @onclick='() => Nav.NavigateTo("/catalog")'>Catalog</button>
                 <button id="ideas-btn" class="secondary-btn">Ideas</button>
+                @* <Auth /> *@
+                <div class="account-btn">
+                    <ProfileCircle />
+                    @if (CurrentUser is not null)
+                    {
+                        <div @onclick:stopPropagation @onkeypress:stopPropagation>                        
+                            @if (IsEditingUsername)
+                            {
+                                <input type="text" @bind="Username"
+                                       @ref="UsernameInput"
+                                       @bind:event="oninput"
+                                       @onblur="SaveUsername"
+                                       @onkeypress="HandleKeyPress" />
+                            }
+                            else
+                            {
+                                <span @onclick="StartEditing">
+                                    @CurrentUser.Username
+                                </span>
+                            }
+                        </div>
+                    }
+                </div>
             </div>            
         }
     </div>
