--- a/Sparc2/Sparc2/Catalog/Catalog.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor.scss
@@ -16,6 +16,7 @@ article {
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
         overflow-y: auto;
+        padding-bottom: 32px;
 
         .product-card {
             width: calc(100% - 32px);
@@ -27,6 +28,7 @@ article {
             align-items: center;
             position: relative;
             text-align: center;
+            cursor: pointer;
 
             .card-overlay {
                 width: 100%;
@@ -80,13 +82,14 @@ article {
     }
 
     .right {
-        height: calc(100vh - 128px);
+        height: calc(100vh - 144px);
         padding: 16px;
+        padding-bottom: 32px;
         position: relative;
 
         .container {
             width: 598px;
-            height: calc(100vh - 128px);
+            height: calc(100vh - 144px);
             position: fixed;
             overflow-y: auto;
             top: 112px;
