--- a/Sparc2/Sparc2/Pages/KoriReferral.razor
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor
@@ -4,6 +4,7 @@
 @inject IJSRuntime JS
 @using System.Net.Http.Json
 @using System.Text.Json
+@using Microsoft.AspNetCore.Components.Forms
 
 @page "/kori"
 
