--- a/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor.scss
@@ -1,4 +1,24 @@
-.kori-login__language {
+.language-select {
+    ::deep select {
+        height: 40px;
+        width: -webkit-fill-available;
+        border-radius: 8px;
+        border: 1px solid var(--gray-100);
+        background: var(--yellow-50);
+        padding: 8px 4px;
+        cursor: pointer;
+
+        &:focus {
+            outline: none;
+            border-color: var(--gray-300);
+            background-color: var(--yellow-100);
+        }
+    }
+}
+
+/*Fernando's code:*/
+
+/*.kori-login__language {
     .kori-login__language-btn {
         width: 100%;
         display: flex !important;
@@ -188,3 +208,4 @@
         opacity: 0.7 !important;
     }
 }
+*/
