--- a/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.scss
@@ -52,7 +52,7 @@
         }
 
         &.top {
-            top: 30px;
+            top: 50px;
             left: -5%;
             transform: translateX(-50%);
         }
@@ -60,6 +60,12 @@
         &.bottom {
             bottom: -20px;
             left: 50%;
+            transform: translateX(-50%);
+        }
+
+        &.top-left {
+            top: 10px;
+            left: -5%;
             transform: translateX(-50%);
         }
     }
@@ -76,6 +82,10 @@
     background: var(--yellow-50);
     animation: fadeIn 1s ease-in-out;
 
+    &.language-modal {
+        top: 44%;
+    }
+    
     header {
         margin-bottom: 16px;
 
