--- a/Sparc2/Sparc2/Catalog/ProductPage.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor.css
@@ -10,9 +10,32 @@ article .page-container > * {
   width: 50%;
 }
 article .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 16px;
+  padding-bottom: 32px;
+}
+article .left > * {
+  width: 100%;
+}
+article .left .product-img {
+  width: 100%;
+  height: auto;
+  background: var(--yellow-200);
+  border-radius: 16px;
+}
+article .left .product-img.span-1 {
+  aspect-ratio: 4/3;
+}
+article .left .span-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 16px;
+}
+article .left .span-2 .product-img {
+  aspect-ratio: 1/1;
 }
 article .right {
   height: calc(100vh - 128px);
