update product page ui, move product info to own component

--- a/Sparc2/Sparc2/Catalog/Catalog.razor
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor
@@ -13,59 +13,23 @@
             }
         </div>
         <div class="right">
-            @if (activeProduct != null)
-            {
-                <div class="container">
+            <div class="container">
+                @if (ActiveProduct != null)
+                {
+                    <ProductInfo ActiveProduct="ActiveProduct" />
+                } else
+                {
                     <div class="product-info">
-                        <header>
-                            <h3>@activeProduct.Title</h3>
-                            <div class="subheader product-tags">
-                                @foreach (var tag in activeProduct.Tags)
-                                {
-                                    var color = TagColor(tag.Type);
-                                    <div class="tag product-tag @color">@tag.Name</div>
-                                }
-                            </div>
-                        </header>
-                        <section class="description">
-                            <p>@activeProduct.Description</p>
-                        </section>
-                        <footer>
-                            <div class="price">
-                                <span>Price: $@activeProduct.Price.ToString()</span>
-                            </div>
-                            <div class="credits">
-                                <h4>Credit +</h4>
-                                <div>
-                                    <p>Vitae pellentesque | Position Title</p>
-                                    <p>Sem placerat | Position Title</p>
-                                    <p>Accumsan maecenas | Position Title</p>
-                                    <p>Vestibulum fusce | Position Title</p>
-                                    <p>Dictum risus | Position Title</p>
-                                    <p>Suspendisse aliquet | Position Title</p>
-                                </div>
-                            </div>
-                        </footer>
                     </div>
-                </div>
-            } else
-            {
-                <div class="container">
-                    <div class="product-info">
-                        <header>
-                            <h3>Select a product</h3>
-                            <p>Hover over each product image to view more details</p>
-                        </header>
-                    </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     </div>
 </article>
 
 @code {
     IEnumerable<Product> Products = new List<Product>();
-    Product activeProduct;
+    Product? ActiveProduct;
 
     protected override async Task OnInitializedAsync()
     {
@@ -75,7 +39,7 @@
         Products = allProducts;
         if (Products != null)
         {
-            activeProduct = Products.FirstOrDefault();
+            ActiveProduct = Products.FirstOrDefault();
         }
     }
 
@@ -112,27 +76,14 @@
         ProductService.OnProductsChanged -= UpdateProducts;
     }
 
-    string TagColor(string tag)
-    {
-        var color = tag switch
-        {
-            "development" => "purple",
-            "testing" => "orange",
-            "gift" => "gradient",
-            "archived" => "grey",
-            "owned" => "blue",
-            _ => "default"
-        };
 
-        return color;
-    }
 
     [JSInvokable("OnHoverProduct")]
     public void OnHoverProduct(string id)
     {
         if (Products != null && Products.Any())
         {
-            activeProduct = Products.FirstOrDefault(p => p.Id == id);
+            ActiveProduct = Products.FirstOrDefault(p => p.Id == id);
             StateHasChanged();
         }
     }
@@ -142,7 +93,7 @@
     {
         if (Products != null && Products.Any())
         {
-            activeProduct = Products.FirstOrDefault(p => p.Id == id);
+            ActiveProduct = Products.FirstOrDefault(p => p.Id == id);
             StateHasChanged();
         }
 
