--- a/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
@@ -50,6 +50,38 @@ article {
         padding: 16px;
         position: relative;
 
+        &-header {
+            button {
+                background: none;
+
+                ::deep svg {
+                    width: 22px;
+                    height: auto;
+
+                    path {
+                        stroke: black;
+                        transition: .2s ease-in-out;
+                    }
+                }
+
+                &:hover {
+                    ::deep svg {
+                        path {
+                            stroke: var(--purple-500);
+                        }
+                    }
+                }
+
+                &:active {
+                    ::deep svg {
+                        path {
+                            stroke: var(--purple-700);
+                        }
+                    }
+                }
+            }
+        }
+
         .container {
             width: 598px;
             height: calc(100vh - 128px);
@@ -57,6 +89,9 @@ article {
             overflow-y: auto;
             top: 112px;
             left: calc(50% + 16px);
+            display: flex;
+            flex-direction: column;
+            gap: 32px;
         }
 
         .product-info {
