--- a/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
+++ b/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
@@ -6,6 +6,7 @@ main {
     margin-top: 80px;
     padding-top: 16px;
     font-family: 'elza-text', sans-serif;
+    animation: fadeIn 2s ease-in-out;
 
     .grid {
         display: grid;
@@ -13,5 +14,15 @@ main {
         //column-gap: 32px;
         grid-template-columns: repeat(12, 80px);
         column-gap: 20px;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
