Refactor profile page; create separate components; create generic reusable modal; add user avatar

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
             </div>
             <div class="right">
                 @* <Auth /> *@
-                <ProfileCircle />
+                <UserProfile />
                 @if (CurrentUser is not null)
                 {
                     <div @onclick:stopPropagation @onkeypress:stopPropagation>                        
@@ -49,7 +49,7 @@
         }
     </div>
 </nav>
-<Auth />
+@* <Auth /> *@
 
 @inject IJSRuntime Js
 
