--- a/Sparc2/Sparc2/Profile/UserProfile.razor.css
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.css
@@ -15,6 +15,16 @@
 .user-profile-container .profile-picture-wrapper.online {
   border: 4px solid #BDE421;
 }
+.user-profile-container .profile-picture-wrapper .user-avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  font-weight: bold;
+  font-size: 1.4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .user-profile-container .profile-picture-wrapper img {
   width: 100%;
   height: 100%;
@@ -46,19 +56,24 @@
   filter: brightness(0) invert(1);
 }
 .user-profile-container button.top {
-  top: 50px;
+  top: 30px;
   left: -5%;
   transform: translateX(-50%);
 }
 .user-profile-container button.bottom {
-  bottom: -20px;
-  left: 50%;
+  bottom: -15px;
+  left: 20%;
   transform: translateX(-50%);
 }
 .user-profile-container button.top-left {
-  top: 10px;
+  top: 0px;
   left: -5%;
   transform: translateX(-50%);
+}
+.user-profile-container button.bottom-right {
+  bottom: -20px;
+  left: 35%;
+  transform: translateX(50%);
 }
 
 .user-profile-container:hover .profile-picture-wrapper {
