--- a/Sparc2/Sparc2/Profile/UserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.scss
@@ -16,6 +16,17 @@
             border: 4px solid #BDE421;
         }
 
+        .user-avatar {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            font-weight: bold;
+            font-size: 1.4em;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         img {
             width: 100%;
             height: 100%;
@@ -52,91 +63,33 @@
         }
 
         &.top {
-            top: 50px;
+            top: 30px;
             left: -5%;
             transform: translateX(-50%);
         }
 
         &.bottom {
-            bottom: -20px;
-            left: 50%;
+            bottom: -15px;
+            left: 20%;
             transform: translateX(-50%);
         }
 
         &.top-left {
-            top: 10px;
+            top: 0px;
             left: -5%;
             transform: translateX(-50%);
+        }
+
+        &.bottom-right {
+            bottom: -20px;
+            left: 35%;
+            transform: translateX(50%);
         }
     }
 }
 
 .user-profile-container:hover .profile-picture-wrapper {
     background: linear-gradient(135deg, #f093fb, #f5576c);
-}
-
-.modal {
-    width: 332px;
-    padding: 24px;
-    border-radius: 16px;
-    background: var(--yellow-50);
-    animation: fadeIn 1s ease-in-out;
-
-    &.language-modal {
-        top: 44%;
-    }
-    
-    header {
-        margin-bottom: 16px;
-
-        h3 {
-            color: var(--gray-900);
-            font-size: 1.6rem;
-            font-weight: 600;
-            line-height: 120%;
-            letter-spacing: -0.16px;
-        }
-    }
-
-    div {
-        width: 100%;
-
-        ::deep input {
-            border-radius: 16px;
-            border: 1px solid var(--gray-100);
-            background: var(--yellow-50);
-            padding: 8px 16px;
-            height: 22px;
-            width: -webkit-fill-available;
-        }
-
-        label {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 5px;
-            margin-top: 10px;
-
-            ::deep input[type=checkbox] {
-                width: auto;
-                padding: 0;
-                margin: 0;
-                height: 14px;
-            }
-
-            span {
-                font-size: 1.2rem;
-                letter-spacing: 0.16px;
-            }
-        }
-    }
-
-    footer {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 16px;
-    }
 }
 
 @keyframes fadeIn {
