--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -14,6 +14,7 @@
 @using Sparc2.Donations
 @using Sparc2.Files
 @using Sparc2.Ideas
+@using Sparc2.Profile
 @using Sparc.Blossom.Api
 @using Idea = Sparc.Blossom.Api.ProjectIdea
 @using File = Sparc.Blossom.Api.FileUpload
