--- a/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor.scss
+++ b/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor.scss
@@ -42,6 +42,8 @@
 
             aside {
                 color: var(--gray-600);
+                font-size: 1rem;
+                letter-spacing: 0.6px;
             }
         }
 
