--- a/Sparc2/Sparc2/Profile/UserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.scss
@@ -20,11 +20,14 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            font-weight: bold;
-            font-size: 1.4em;
+            font-weight: normal;
+            font-size: 2.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
+            line-height: 1;
+            padding: 0;
+            overflow: hidden;
         }
 
         img {
